--- a/zero-cloud-config/src/main/resources/application.properties
+++ b/zero-cloud-config/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.cloud.config.server.git.default-label=master
+spring.cloud.config.server.git.default-label=main
 server.port=8888
 spring.cloud.config.server.git.refresh-rate=60
-spring.cloud.config.server.git.uri=https://github.com/Folko85/configs.git
+spring.cloud.config.server.git.uri=https://github.com/Shkiller/configs.git
 
