--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -152,6 +152,13 @@ services:
       monitoring:
         aliases:
           - loki
+  technical_support_db:
+    image: mongo:latest
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=technical_support
+      - MONGO_INITDB_ROOT_PASSWORD=aj@Z|0qLY#lZ
+    ports:
+      - "3309:3309"
   rabbitmq:
     restart: always
     image: rabbitmq:management
