--- a/microservice/pom.xml
+++ b/microservice/pom.xml
@@ -138,6 +138,13 @@
             <artifactId>mailjet-client</artifactId>
             <version>5.2.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>3.3.3</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
